Changed styles for Runner section so it fixes the flickering on safari

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -418,3 +418,22 @@ html, body {
     width: 100%;
   }
 } 
+
+.edi_image-wrapper {
+  position: relative;
+  max-width: 485px;
+  max-height: 555px;
+  width: 30em;
+  height: 35em;
+}
+
+.edi-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0;
+}
+
+.edi-image._2 {
+  z-index: 2;
+} 
